--- a/dashboards/templates/dashboards/subjects_gantt.html
+++ b/dashboards/templates/dashboards/subjects_gantt.html
@@ -16,7 +16,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 <style>
         .filter-panel > .panel-heading {
-      background-color: #eeeeee !important;
+      background-color: #f9f9f9 !important;
       padding:0px;
       color:#000 !important;
     }
@@ -97,13 +97,13 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
     layout: {
         maxrow: 5,
-            colors: ["#FF9001", "#dfbd31", "#868686", "#f44336", "#3BA51A"],
+            colors: ["#FF9001", "#dfbd31", "#868686", "#f44336", "#3BA51A"],//#009886
                 texts: ['{% trans "Late"%}', '{% trans "On time"%}', 
                         '{% trans "Planned"%}', '{% trans "Lost"%}', 
                         '{% trans "Completed"%}'],
                     //texts2: ['{% trans "This task is late"%}', '{% trans "You have not yet accomplish this task"%}', 
                                 //"", '{% trans "You missed this task"%}', ""],
-                    backcolor: "#F5F5F5",
+                    backcolor: "#F9F9F9",
                         percent_min: 0.3,
                 //percent_text:'{#{% trans "Task already accomplish by % of participants" %}#}',
                 //buttonAccess_text:'{#{% trans "ACCESS TASK" %}#}ACESSAR TAREFA',      
