--- a/dashboards/templates/dashboards/subjects_other_indicators_card.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators_card.html
@@ -64,7 +64,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             </div>
         </div>
     </div>
-    <div id="{{ tittle }}_accordion_inner" class="panel-collapse collapse category-panel-content">
+    <div id="{{ tittle }}_accordion_inner" class="panel-collapse collapse indicator-panel-content">
         <div class="row">
             <div id="period" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                 <h5 class="card-tittle">
