--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -282,4 +282,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         }*/
     }
     var cloudWord = new CloudWord(dataconfig);
+
+    function cloudy_responsibilities(){
+
+    }
 </script>
