--- a/dashboards/templates/dashboards/subjects_other_indicators_card.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators_card.html
@@ -12,93 +12,57 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 {% load static i18n %}
 
-<div class="panel panel-info indicator-panel" id="{{ tittle }}_accordion_outer">
-    <div class="panel-heading  accordion-toggle collapsed">
-        <div class="row">
-            <div id="accordion_bar" class="col-md-12 category-header card-indicator">
-                <h4 class="panel-title">
-                    <a data-parent="#indicators-accordion" data-toggle="collapse" href="#{{ tittle }}_accordion_inner">
-                        <button id="accordion_button" class="btn btn-default btn-xs text-center cat-selector">
-                            <i class="fa fa-angle-right fa-2x" aria-hidden="true" style="color:#000"></i>
-                        </button>
-                    </a>
-                </h4>
-                <svg class="graph-indicator">
-                    <rect fill="#00ffea" class="rect-other-indicator" width="00%" x="0%"></rect>
-                    <rect fill="#00e6d1" class="rect-other-indicator" width="00%" x="20%"></rect>
-                    <rect fill="#00ccb7" class="rect-other-indicator" width="00%" x="40%"></rect>
-                    <rect fill="#00b29e" class="rect-other-indicator" width="00%" x="60%"></rect>
-                    <rect fill="#009886" class="rect-other-indicator" width="00%" x="80%"></rect>
-                    <rect class="back-other-indicator" x="0%"></rect>
-                    <rect class="back-other-indicator" x="20%"></rect>
-                    <rect class="back-other-indicator" x="40%"></rect>
-                    <rect class="back-other-indicator" x="60%"></rect>
-                    <rect class="back-other-indicator" x="80%"></rect>
-                </svg>
-                <svg id="{{ tittle }}_star" width="45px" height="25px" style="margin-top: 5px;">
-                    <g class="golden_star" transform="translate(12.5,12.5)scale(11,11)rotate(18)" opacity="0">
-                        <path fill="#F9DD6B" d="M 0 0 L -0.850646 0 L -0.425323 -0.309011 z"></path>
-                        <path fill="#F4D558" d="M 0 0 L -0.425323 -0.309011 L -0.262867 -0.809012 z"></path>
-                        <path fill="#E5C547" d="M 0 0 L -0.262867 -0.809012 L 0.162456 -0.499995 z"></path>
-                        <path fill="#F9DD6B" d="M 0 0 L 0.162456 -0.499995 L 0.688191 -0.499997 z"></path>
-                        <path fill="#BFA53F" d="M 0 0 L 0.688191 -0.499997 L 0.52573 0 z"></path>
-                        <path fill="#D6BB4F" d="M 0 0 L 0.52573 0 L 0.688191 0.499997 z"></path>
-                        <path fill="#A88E25" d="M 0 0 L 0.688191 0.499997 L 0.162456 0.499995 z"></path>
-                        <path fill="#A88E25" d="M 0 0 L 0.162456 0.499995 L -0.262867 0.809012 z"></path>
-                        <path fill="#D6BB4F" d="M 0 0 L -0.262867 0.809012 L -0.425323 0.309011 z"></path>
-                        <path fill="#BFA53F" d="M 0 0 L -0.425323 0.309011 L -0.850646 0 z"></path>
-                    </g>
-                    <g class="silver_star" transform="translate(12.5,12.5)scale(11,11)rotate(18)" opacity="0">
-                        <path fill="#DDDDDD" d="M 0 0 L -0.850646 0 L -0.425323 -0.309011 z"></path>
-                        <path fill="#E5E5E5" d="M 0 0 L -0.425323 -0.309011 L -0.262867 -0.809012 z"></path>
-                        <path fill="#FFFFFF" d="M 0 0 L -0.262867 -0.809012 L 0.162456 -0.499995 z"></path>
-                        <path fill="#DDDDDD" d="M 0 0 L 0.162456 -0.499995 L 0.688191 -0.499997 z"></path>
-                        <path fill="#BBBBBB" d="M 0 0 L 0.688191 -0.499997 L 0.52573 0 z"></path>
-                        <path fill="#D1D1D1" d="M 0 0 L 0.52573 0 L 0.688191 0.499997 z"></path>
-                        <path fill="#AAAAAA" d="M 0 0 L 0.688191 0.499997 L 0.162456 0.499995 z"></path>
-                        <path fill="#AAAAAA" d="M 0 0 L 0.162456 0.499995 L -0.262867 0.809012 z"></path>
-                        <path fill="#D1D1D1" d="M 0 0 L -0.262867 0.809012 L -0.425323 0.309011 z"></path>
-                        <path fill="#BBBBBB" d="M 0 0 L -0.425323 0.309011 L -0.850646 0 z"></path>
-                    </g>
-                </svg>
-            </div>
-        </div>
-    </div>
-    <div id="{{ tittle }}_accordion_inner" class="panel-collapse collapse indicator-panel-content">
-        <div class="row">
-            <div id="period" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-                <h5 class="card-tittle">
-                    <b>{% if tittle == "access_enviromment" %}
-                        {% trans 'Access to the discipline environment' %}
-                        {% elif tittle == "distincts_days" %}
-                        {% trans 'Different days that accessed the discipline' %}
-                        {% elif tittle == "access_resource" %}
-                        {% trans 'Resource access' %}
-                        {% elif tittle == "distincts_resource" %}
-                        {% trans 'Distinct resources accessed' %}
-                        {% elif tittle == "tasks_on_time" %}
-                        {% trans 'Tasks performed on time' %}
-                        {% else %}
-                        {% trans 'Other indicator' %}
-                        {% endif %}
-                    </b>
-                </h5>
-                <p id="{{ tittle }}_my_result" class="card-text you-result">{% trans 'Your result:'%}</p>
-                <p id="{{ tittle }}_max_class" class="card-text max-result">{% trans 'Top of the class:'%}</p>
+<div class="indicator-panel" id="{{ tittle }}_accordion_outer">
 
-            </div>
-        </div>
+    <h5 class="card-tittle">
+        <b>{% if tittle == "access_enviromment" %}
+            {% trans 'Access to the discipline environment' %}
+            {% elif tittle == "distincts_days" %}
+            {% trans 'Different days that accessed the discipline' %}
+            {% elif tittle == "access_resource" %}
+            {% trans 'Resource access' %}
+            {% elif tittle == "distincts_resource" %}
+            {% trans 'Distinct resources accessed' %}
+            {% elif tittle == "tasks_on_time" %}
+            {% trans 'Tasks performed on time' %}
+            {% else %}
+            {% trans 'Other indicator' %}
+            {% endif %}
+        </b>
+    </h5>
+    <div class="container-graph-indicator">
+    <svg class="graph-indicator">
+
+        <rect class="rect-other-comp-indicator" width="100%"></rect>
+        <rect class="rect-other-indicator" width="00%" x="0%"></rect>
+        <rect class="back-other-indicator" x="20%"></rect>
+        <rect class="back-other-indicator" x="40%"></rect>
+        <rect class="back-other-indicator" x="60%"></rect>
+        <rect class="back-other-indicator" x="80%"></rect>
+        <text class="text-your-indicator"  dx = "-5px" dy="0.4em" y="50%"></text>
+        <g class="star-container">
+            <g class="golden-star" transform="translate(-12.5,12.5)scale(11,11)rotate(18)" opacity="0">
+                <path fill="#FF8E01" d="M -0.850646,0 L -0.262491,-0.190708 -0.262867,-0.809012 0.10026,-0.308574 0.688191,-0.499997 0.324457,0 0.688191,0.499997 0.10026,0.308574 -0.262867,0.809012 -0.262491,0.190708 z"></path>
+            </g>
+        </g>
+    </svg>
+    
+    <div class="back-max-indicator">
+        <p class="text-max-indicator">
+            20
+        </p>
+    </div>
     </div>
 </div>
 
 <script>
     $('#{{ tittle }}_accordion_inner').on('shown.bs.collapse', function () {
         document.querySelector("#{{ tittle }}_accordion_outer")
-            .querySelector("#accordion_button").querySelector("i").setAttribute("class","fa fa-angle-down fa-2x");
+            .querySelector("#accordion_button").querySelector("i").setAttribute("class", "fa fa-angle-down fa-2x");
     })
 
     $('#{{ tittle }}_accordion_inner').on('hidden.bs.collapse', function () {
         document.querySelector("#{{ tittle }}_accordion_outer")
-            .querySelector("#accordion_button").querySelector("i").setAttribute("class","fa fa-angle-right fa-2x");
+            .querySelector("#accordion_button").querySelector("i").setAttribute("class", "fa fa-angle-right fa-2x");
     })
 </script>
