--- a/dashboards/templates/dashboards/subjects_gantt.html
+++ b/dashboards/templates/dashboards/subjects_gantt.html
@@ -15,7 +15,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {# {{ graph_data }} #}
 
 <style>
-        .filter-panel > .panel-heading {
+    .filter-panel > .panel-heading {
       background-color: #f9f9f9 !important;
       padding:0px;
       color:#000 !important;
@@ -32,13 +32,12 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
     <div class="panel-group" id="filter-accordion" aria-multiselectable="true">
-        <div class="panel panel-info filter-panel" id="filter_accordion_outer" >
+        <div class="panel panel-info filter-panel" id="filter_accordion_outer">
             <div class="panel-heading">
                 <div class="row">
                     <div id="accordion_bar" class="col-md-12 category-header">
                         <h4 class="panel-title">
-                            <a data-parent="#filter-accordion" data-toggle="collapse"
-                                href="#filter_accordion_inner">
+                            <a data-parent="#filter-accordion" data-toggle="collapse" href="#filter_accordion_inner">
                                 <button id="accordion_button" class="btn btn-default btn-xs text-center cat-selector">
                                     <i class="fa fa-angle-right fa-2x" aria-hidden="true" style="color:#000"></i>
                                 </button> {% trans 'Filters' %}
@@ -52,7 +51,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             <div id="filter_accordion_inner" class="panel-collapse collapse category-panel-content">
                 <input type="hidden" class="log_url" value="{% url 'subjects:view_log' subject.id %}" />
                 <input type="hidden" class="log_id" value="" />
-        
+
                 <div class="row">
                     <div id="period" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                         <!--<hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">-->
@@ -63,18 +62,17 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                         <hr style="height:2px; background-color:#bbb;margin-top: 5px;margin-bottom: 5px;">
                         <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; ">
                             <b>{% trans 'Select the status' %}</b></div>
-        
+
                     </div>
                     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                         <hr style="height:2px; background-color:#bbb;margin-top: 5px;margin-bottom: 5px;">
                         <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; ">
                             <b>{% trans 'Select what we have for today' %}</b>
                         </div>
-        
+
                         <div class="col-md-4 col-xs-12 col-sm-12 col-lg-4 text-center">
-                            <button onclick="ganttChart.reset();" class="btn btn-default btn-raised btn-block" 
-                                style="position: initial;background-color: #ddd">
-                                    {% trans "Today" %}
+                            <button onclick="ganttChart.reset();" class="btn btn-default btn-raised btn-block" style="position: initial;background-color: #ddd">
+                                {% trans "Today" %}
                             </button>
                         </div>
                     </div>
@@ -98,11 +96,11 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     layout: {
         maxrow: 5,
             colors: ["#FF9001", "#dfbd31", "#868686", "#f44336", "#3BA51A"],//#009886
-                texts: ['{% trans "Late"%}', '{% trans "On time"%}', 
-                        '{% trans "Planned"%}', '{% trans "Lost"%}', 
-                        '{% trans "Completed"%}'],
+                texts: ['{% trans "Late"%}', '{% trans "On time"%}',
+                    '{% trans "Planned"%}', '{% trans "Lost"%}',
+                    '{% trans "Completed"%}'],
                     //texts2: ['{% trans "This task is late"%}', '{% trans "You have not yet accomplish this task"%}', 
-                                //"", '{% trans "You missed this task"%}', ""],
+                    //"", '{% trans "You missed this task"%}', ""],
                     backcolor: "#F9F9F9",
                         percent_min: 0.3,
                 //percent_text:'{#{% trans "Task already accomplish by % of participants" %}#}',
@@ -129,23 +127,30 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 filter: '{% static "img/cursors/filter.cur" %}',
             }
         }
-    
+
     var ganttChart = new GanttChart(chartConfig).draw();
 
     $('#filter_accordion_inner').on('shown.bs.collapse', function () {
         ganttChart.draw2();
-        document.querySelector("#accordion_button").querySelector("i").setAttribute("class","fa fa-angle-down fa-2x");
+        document.querySelector("#accordion_button").querySelector("i").setAttribute("class", "fa fa-angle-down fa-2x");
         //setTimeout(function,delay_ms);
     })
 
     $('#filter_accordion_inner').on('hidden.bs.collapse', function () {
-        document.querySelector("#accordion_button").querySelector("i").setAttribute("class","fa fa-angle-right fa-2x");
+        document.querySelector("#accordion_button").querySelector("i").setAttribute("class", "fa fa-angle-right fa-2x");
     })
     document.querySelector("#accordion_button").click();
     //document.querySelector("#accordion_button").click();
 
-    window.setTimeout(function(){
+    window.setTimeout(function () {
         document.querySelector("#accordion_button").click();
-    },100);
+    }, 100);
+
+    function gantt_responsibilities() {
+        ganttChart.resize();
+        //ganttChart.bottomLegend.resize();
+        if ($('#filter_accordion_inner').attr('aria-expanded') == "true")
+            ganttChart.draw2();
+    }
 
 </script>
