--- a/dashboards/templates/dashboards/subjects_gantt.html
+++ b/dashboards/templates/dashboards/subjects_gantt.html
@@ -14,6 +14,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 {# {{ graph_data }} #}
 
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
 <style>
     .filter-panel > .panel-heading {
       background-color: #f9f9f9 !important;
@@ -21,72 +24,131 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       color:#000 !important;
     }
 </style>
+<style>
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 38px;
+      height: 22px;
+    }
+    
+    .switch input { 
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+    
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 17px;
+      width: 17px;
+      left: 2px;
+      bottom: 2.6px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+    
+    input:checked + .slider {
+      background-color: #009688;
+    }
+    
+    input:focus + .slider {
+      box-shadow: 0 0 1px #009688;
+    }
+    
+    input:checked + .slider:before {
+      -webkit-transform: translateX(17px);
+      -ms-transform: translateX(17px);
+      transform: translateX(17px);
+    }
+    
+    /* Rounded sliders */
+    .slider.round {
+      border-radius: 22px;
+    }
+    
+    .slider.round:before {
+      border-radius: 50%;
+    }
 
-<script src="{% static 'analytics/js/Legend.js' %}"></script>
+    .gantt-legend{
+        width: 140px;
+        height: 30px;
+        padding: 4px;
+        margin:5px;
+        background: #009688;
+        cursor: pointer;
+    }
+    .gantt-legend-text{
+        color: #EEEEEE; 
+        margin:4px;
+        font-size: 12px;
+    }
+</style>
+
+<!--<script src="{% static 'analytics/js/Legend.js' %}"></script>-->
 <script src="{% static 'analytics/js/brush_zoom.js' %}"></script>
 
 <div id="gantt" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-    <div style="font-size:16px; text-align:left; color: #000; padding-left: 10px; ">
-        <b>{% trans 'Detail of Tasks' %}</b>
-        <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" 
-        title="{% trans 'Positions all activities suggested by the teacher on the current subject in a timeline' %}"></i>
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style=" padding-left: 10px; ">
+        <div style="float:left;font-size:16px; text-align:left; color: #000;">
+            <b>{% trans 'Detail of Tasks' %}</b>
+            <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Positions all activities suggested by the teacher on the current subject in a timeline' %}"></i>
+        </div>
+        <div style="float:right">
+            {% trans '(%)Class' %}
+            <label class="switch">
+                <input id="ganttPercent" type="checkbox" name="percentOn" checked onclick="invertPercent()">
+                <span class="slider round"></span>
+            </label>
+        </div>
     </div>
-    <hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style="padding: 0px">
+        <hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">
+    </div>
 </div>
 
 <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-    <div class="panel-group" id="filter-accordion" aria-multiselectable="true">
-        <div class="panel panel-info filter-panel" id="filter_accordion_outer">
-            <div class="panel-heading">
-                <div class="row">
-                    <div id="accordion_bar" class="col-md-12 category-header">
-                        <h4 class="panel-title">
-                            <a data-parent="#filter-accordion" data-toggle="collapse" href="#filter_accordion_inner">
-                                <button id="accordion_button" class="btn btn-default btn-xs text-center cat-selector">
-                                    <i class="fa fa-angle-right fa-2x" aria-hidden="true" style="color:#000"></i>
-                                </button> {% trans 'Filters' %}
-                            </a>
-                        </h4>
-                        <!-- <div class="col-lg-4 col-md-5   col-sm-12 col-xs-12 pull-right category-card-items">
-                        </div>-->
-                    </div>
-                </div>
-            </div>
-            <div id="filter_accordion_inner" class="panel-collapse collapse category-panel-content">
-                <input type="hidden" class="log_url" value="{% url 'subjects:view_log' subject.id %}" />
-                <input type="hidden" class="log_id" value="" />
-
-                <div class="row">
-                    <div id="period" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-                        <!--<hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">-->
-                        <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; ">
-                            <b>{% trans 'Select the period' %}</b></div>
-                    </div>
-                    <div id="legend-gantt" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-                        <hr style="height:2px; background-color:#bbb;margin-top: 5px;margin-bottom: 5px;">
-                        <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; ">
-                            <b>{% trans 'Select the status' %}</b></div>
-
-                    </div>
-                    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-                        <hr style="height:2px; background-color:#bbb;margin-top: 5px;margin-bottom: 5px;">
-                        <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; ">
-                            <b>{% trans 'Select what we have for today' %}</b>
-                        </div>
-
-                        <div class="col-md-4 col-xs-12 col-sm-12 col-lg-4 text-center">
-                            <button onclick="ganttChart.reset();" class="btn btn-default btn-raised btn-block" style="position: initial;background-color: #ddd">
-                                {% trans "Today" %}
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <hr style="height:2px; background-color:#bbb;margin-top: 5px;margin-bottom: 5px;">
+    <div id="legend-gantt" class="col-md-8 col-xs-12 col-sm-12 col-lg-10" style="padding: 0px">
+            {% with color="#FF9001" %}
+            {% include 'dashboards/subjects_gantt_legend.html' with tittle="late" %}
+            {% endwith %}
+            {% with color="#dfbd31" %}
+            {% include 'dashboards/subjects_gantt_legend.html' with tittle="on_time" %}
+            {% endwith %}
+            {% with color="#868686" %}
+            {% include 'dashboards/subjects_gantt_legend.html' with tittle="planned" %}
+            {% endwith %}
+            {% with color="#f44336" %}
+            {% include 'dashboards/subjects_gantt_legend.html' with tittle="lost" %}
+            {% endwith %}
+            {% with color="#3BA51A" %}
+            {% include 'dashboards/subjects_gantt_legend.html' with tittle="completed" %}
+            {% endwith %}
+    </div>
+    <div class="col-md-4 col-xs-8 col-sm-5 col-lg-2 text-center gantt-legend" onclick="ganttChart.reset();" style="background: #ddd">
+            <b>{% trans "Now" %}</b>
     </div>
 </div>
 
 <script type="text/javascript">
+
+    var percentOn = true;
     var chartConfig = {
         name: "GanttChart",
         parents: {
@@ -98,21 +160,20 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     //dimensions: { width: 1200, height: 500 },
 
     layout: {
+        percentOn: percentOn,
         maxrow: 5,
             colors: ["#FF9001", "#dfbd31", "#868686", "#f44336", "#3BA51A"],//#009886
-                texts: ['{% trans "Late"%}', '{% trans "On time"%}',
-                    '{% trans "Planned"%}', '{% trans "Lost"%}',
-                    '{% trans "Completed"%}'],
-                    //texts2: ['{% trans "This task is late"%}', '{% trans "You have not yet accomplish this task"%}', 
-                    //"", '{% trans "You missed this task"%}', ""],
-                    backcolor: "#F9F9F9",
-                        percent_min: 0.3,
-                //percent_text:'{#{% trans "Task already accomplish by % of participants" %}#}',
-                //buttonAccess_text:'{#{% trans "ACCESS TASK" %}#}ACESSAR TAREFA',      
-                //buttonDoTask_text:'{% trans "DO THE TASK" %}',
-                //initDate_text:'{% trans "Start Date / Time: " %}',
-                //endDate_text:'{% trans "End Date / Time: " %}',
-                //closedDate_text:'{% trans "Task closed on: " %}',
+                texts: ["late","on_time","planned","lost","completed"],
+                texts2: ['{% trans "This task is late"%}', '{% trans "You have not yet accomplish this task"%}', 
+                                "", '{% trans "You missed this task"%}', ""],
+                backcolor: "#F9F9F9",
+                percent_min: 0.3,
+                percent_text:'{% trans " % already accomplish" %}',
+                buttonAccess_text:'{% trans "ACCESS TASK" %}',      
+                buttonDoTask_text:'{% trans "DO THE TASK" %}',
+                initDate_text:'{% trans "Start: " %}',
+                endDate_text:'{% trans "End: " %}',
+                closedDate_text:'{% trans "Closed on: " %}',
                 //language:'{{ language }}'
             },
     interactions: {
@@ -125,16 +186,36 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     tooltip: {
         text: ""
     },
-    cursors: {
-        adder: '{% static "img/cursors/adder.cur" %}',
-            subber: '{% static "img/cursors/subber.cur" %}',
-                filter: '{% static "img/cursors/filter.cur" %}',
-            }
+    filters:{
+        filter:function(marked){
+            d3.selectAll(".gantt-legend-status")
+                .style("cursor",function(d,i){
+                    return "url("+(marked[i]?'{% static "img/cursors/subber.cur" %}':'{% static "img/cursors/adder.cur" %}')+"),auto";
+                })
+                .select(".fa").attr("class",function(d,i){
+                    return "gantt-legend-text fa fa-toggle-"+ (marked[i]?"on":"off");
+                });
+        },
+        filter_out:function(marked){
+            d3.selectAll(".gantt-legend-status")
+                .style("cursor",function(d){
+                    return "url({% static 'img/cursors/filter.cur' %}),auto";
+                })
+                .select(".fa").attr("class",function(d){
+                    return "gantt-legend-text fa fa-toggle-off";
+                });
+        }
+    }
         }
 
-    var ganttChart = new GanttChart(chartConfig).draw();
+    var ganttChart = new GanttChart(chartConfig).draw().reset()//.draw2();
 
-    $('#filter_accordion_inner').on('shown.bs.collapse', function () {
+    function invertPercent(){
+        percentOn = !percentOn;
+        ganttChart.percentOnOff(percentOn);
+    }
+
+    /*$('#filter_accordion_inner').on('shown.bs.collapse', function () {
         ganttChart.draw2();
         document.querySelector("#accordion_button").querySelector("i").setAttribute("class", "fa fa-angle-down fa-2x");
         //setTimeout(function,delay_ms);
@@ -149,12 +230,12 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     window.setTimeout(function () {
         document.querySelector("#accordion_button").click();
     }, 100);
-
+    */
     function gantt_responsibilities() {
-        ganttChart.resize();
+        ganttChart.draw()//.draw2();
         //ganttChart.bottomLegend.resize();
-        if ($('#filter_accordion_inner').attr('aria-expanded') == "true")
-            ganttChart.draw2();
+        //if ($('#filter_accordion_inner').attr('aria-expanded') == "true")
+        //ganttChart.draw2();
     }
 
 </script>
